--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -33,9 +33,9 @@
       </div>
     </div>
 
-      <a href="{% url 'merchant_view' %}"
+      <a href="{% url 'blacksmith_page' %}"
          class="w-full text-center rounded bg-transparent border border-amber-700 text-amber-500 hover:bg-amber-700 hover:text-white transition py-2 font-semibold">
-        Handlarz
+        Kowal
       </a>
 
       <a href="{% url 'logout_user' %}"
