--- a/klon/templates/base.html
+++ b/klon/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Placeholder{% endblock %}</title>
     <link rel="icon" href="{% static 'images/favicon.png' %}" type="image/png">
@@ -21,11 +22,12 @@
       
       {% block sidebar %} {% endblock %}
       <div class="content">
-        <div class="h-[100px] w-full">{% block banner_up %} {% endblock %}</div>
+        <div class="h-[100px] w-full" id="player-banner">{% block banner_up %} {% endblock %}</div>
         <div class="w-full">{% block navbar %} {% endblock %} </div>
         <div class="">{% block content %} {% endblock %} </div>
         <div class="">{% block footer %} {% endblock %}</div>
       </div>
     </div>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
