--- a/klon/templates/sidebar.html
+++ b/klon/templates/sidebar.html
@@ -35,7 +35,12 @@
 
       <a href="{% url 'blacksmith_page' %}"
          class="w-full text-center rounded bg-transparent border border-amber-700 text-amber-500 hover:bg-amber-700 hover:text-white transition py-2 font-semibold">
-        Kowal
+        KOWAL
+      </a>
+
+      <a href="{% url 'alchemist' %}"
+         class="w-full text-center rounded bg-transparent border border-amber-700 text-amber-500 hover:bg-amber-700 hover:text-white transition py-2 font-semibold">
+        ALCHEMIK
       </a>
 
       <a href="{% url 'logout_user' %}"
