--- a/klon/lokacje/templates/lokacje/circus.html
+++ b/klon/lokacje/templates/lokacje/circus.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %} 
-
+Cyrk Gladiatorów
 {% endblock %}
 
 {% block extra_head %}
@@ -13,9 +13,7 @@
 {% include 'banner_up.html' %}
 {% endblock %}
 
-{% block navbar %}
-{% include "navbar.html" %}
-{% endblock %}
+
 
 {% block sidebar %}
 {% include 'sidebar.html' %}
