--- a/klon/lokacje/templates/lokacje/dessert_hills.html
+++ b/klon/lokacje/templates/lokacje/dessert_hills.html
@@ -2,7 +2,10 @@
 {% load static %}
 
 {% block title %} 
+Pustynne Wzgórza
+{% endblock %}
 
+{% block extra_css %}
 {% endblock %}
 
 {% block extra_head %}
@@ -13,9 +16,7 @@
 {% include 'banner_up.html' %}
 {% endblock %}
 
-{% block navbar %}
-{% include "navbar.html" %}
-{% endblock %}
+
 
 {% block sidebar %}
 {% include 'sidebar.html' %}
